--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
+    "@langchain/core": "^0.3.77",
+    "@langchain/google-genai": "^0.2.18",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -46,6 +49,7 @@
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
     "input-otp": "1.4.1",
+    "langchain": "^0.3.34",
     "lucide-react": "^0.454.0",
     "next": "^14.2.33",
     "next-themes": "^0.4.6",
