--- a/src/package.json
+++ b/src/package.json
@@ -26,10 +26,9 @@
     "ci:test": "npm run quality && npm run knip && npm run build"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
     "@langchain/core": "^0.3.77",
-    "@langchain/google-genai": "^0.2.18",
+    "@langchain/openai": "^0.3.11",
     "@langchain/pinecone": "^0.2.0",
     "@pinecone-database/pinecone": "^6.1.2",
     "@radix-ui/react-accordion": "1.2.2",
